<resources>
    <string name="app_name">Votingiva</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="signup">Sign Up</string>
    <string name="reg">Register</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="noti">Notification</string>
    <string name="HOME">Home</string>
    // nav bar home
    <string name="Me">Me</string>
    // nav bar home
    <string name="notification">Notification</string>
    // nav bar home
    <string name="spaces">Spaces</string>
    // nav bar home
    <string name="add">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bar_chart">Bar Chart</string>
    <string name="votingiva">Votingiva</string>
    <string name="createA">Don\'t have an account yet?</string>
    <string name="Already">Already have an account.</string>
    // nav bar home
</resources>